--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.19.0",
     "@clerk/themes": "^1.7.4",
+    "@heroicons/react": "^2.0.18",
     "@next/bundle-analyzer": "^13.4.4",
     "@prisma/client": "^4.14.0",
     "@t3-oss/env-nextjs": "^0.3.1",
@@ -24,6 +25,8 @@
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
+    "react-toastify": "^9.1.3",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
