started logic for creating analysis boards, updated README. Updated landing page a bit

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
     "axios": "^1.4.0",
+    "chess.js": "^1.0.0-beta.6",
     "next": "^13.4.2",
     "react": "18.2.0",
+    "react-chessboard": "^3.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-toastify": "^9.1.3",
