--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.mjs"],
+    "**/*.mjs", "src/features/ChessBoard"],
   "exclude": ["node_modules"]
 }
