--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^4.19.0",
     "@clerk/themes": "^1.7.4",
     "@heroicons/react": "^2.0.18",
+    "@hookform/error-message": "^2.0.1",
     "@next/bundle-analyzer": "^13.4.4",
     "@prisma/client": "^4.14.0",
     "@t3-oss/env-nextjs": "^0.3.1",
