--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/themes": "^1.7.4",
     "@heroicons/react": "^2.0.18",
     "@hookform/error-message": "^2.0.1",
+    "@mliebelt/pgn-parser": "^1.4.12",
     "@next/bundle-analyzer": "^13.4.4",
     "@prisma/client": "^4.14.0",
     "@t3-oss/env-nextjs": "^0.3.1",
@@ -23,9 +24,11 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "@uiw/react-md-editor": "^3.23.3",
     "axios": "^1.4.0",
     "chess.js": "^1.0.0-beta.6",
     "next": "^13.4.2",
+    "next-remove-imports": "^1.0.11",
     "react": "18.2.0",
     "react-chessboard": "^3.1.0",
     "react-dom": "18.2.0",
