--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@uiw/react-md-editor": "^3.23.3",
     "axios": "^1.4.0",
     "chess.js": "^1.0.0-beta.6",
+    "daisyui": "^3.5.0",
     "next": "^13.4.2",
     "next-remove-imports": "^1.0.11",
     "react": "18.2.0",
@@ -37,6 +38,7 @@
     "react-hook-form": "^7.44.3",
     "react-toastify": "^9.1.3",
     "superjson": "1.12.2",
+    "tailwindcss-hero-patterns": "^0.1.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
