trying to fix some build issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.mjs", "src/features/ChessBoard"],
+    "**/*.mjs",],
   "exclude": ["node_modules"]
 }
